MonetDB5/src/mal/Tests/tst002.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2004, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet_5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet_5/Linux/var/MonetDB
# dbname:demo
## reserved names may not be used as target variables
#	true:= 23;
#	false:= 24;
#barrier barrier:= true;
#	b:= true;
#	b:= false;
#exit barrier;
#
!ERROR: 'true' is a reserved identifier
!ERROR: 'false' is a reserved identifier
!ERROR: 'barrier' is a reserved identifier
!ERROR: 'barrier' is a reserved identifier
function Admin.main():int;	# 0  unknown (main:int)
    23;	# 1  unknown ($1:any)<-($2:int)
    24;	# 2  unknown ($3:any)<-($4:int)
barrier true;	# 3  unknown ($5:any)<-($6:bit)
    b := true;	# 4  unknown (b:any)<-($6:bit)
    b := false;	# 5  unknown (b:any)<-($8:bit)
exit $9;	# 6  unknown ($9:any)
end main;	# 7  unknown 
>